kind of final thesis

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,10 +7,10 @@ rmd_files: ["index.Rmd",
 "rmd/04-intro.Rmd",
 "rmd/05-methods.Rmd",
 "rmd/06-dev/1.Rmd",
-# "rmd/06-dev/2.Rmd",
-# "rmd/06-dev/3.Rmd",
-# "rmd/06-dev/4.Rmd",
-# "rmd/07-ev.Rmd",
+"rmd/06-dev/2.Rmd",
+"rmd/06-dev/3.Rmd",
+"rmd/06-dev/4.Rmd",
+"rmd/07-ev.Rmd",
 "rmd/08-shortRNA.Rmd",
 "rmd/09-outlook.Rmd",
 "rmd/11-appendix1.Rmd",
