--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,6 +11,7 @@ rmd_files: ["index.Rmd",
 "rmd/06-dev/2.Rmd",
 "rmd/06-dev/3.Rmd",
 "rmd/06-dev/4.Rmd",
+"rmd/06-dev/5.Rmd",
 "rmd/07-ev.Rmd",
 "rmd/08-shortRNA.Rmd",
 "rmd/09-outlook.Rmd",
